--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <span class="icon-laptop"></span>
     <span class="fa fa-ravelry"></span>
 
+    <div class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam aut, natus ducimus voluptatibus illo perspiciatis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi fugiat dignissimos, doloribus voluptas error eveniet!</div>
+
 </body>
 </html>
