--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <script src="bundle.js"></script>
 </head>
 <body class="default-option">
-    <span class="icon-laptop"></span>
-    <span class="fa fa-ravelry"></span>
 
-    <div class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam aut, natus ducimus voluptatibus illo perspiciatis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi fugiat dignissimos, doloribus voluptas error eveniet!</div>
+    <header>
+        <section class="banner-video">
+
+        </section>
+
+        
+    </header>
 
 </body>
 </html>
