--- a/index.html
+++ b/index.html
@@ -10,10 +10,41 @@
 <body class="default-option">
 
     <header>
-        <section class="banner-video">
+        <div class="banner-video">
+            <h3 class="subtitle">content description</h3>
+            <h2 class="title">See the world through our product</h2>
+            <p class="banner-video-description">Get The Most Converstion Rate Easily.</p>
+            <a href="#" class="video-icon"><i class="fa fa-play-circle-o"></i></a>
+            <form class="subscribe-form" action="#">
+                <input type="text" name="name" placeholder="Your Name">
+                <input type="email" name="email" placeholder="Email Address">
+                <button type="submit">Subscribe »</button>
+            </form>
+            <p class="banner-video-text">
+                * We don’t share your personal<br>
+                info with anyone Check out our <span class="alt-text">Policy</span> &amp; for more information <span class="alt-text">Contact Us</span>. 
+            </p>
+        </div>
 
-        </section>
-
+        <div class="navigation">
+            <div class="container">
+                <a href="#" class="logo"><img src="/src/styles/images/logo.png" alt="logo site"></a>
+                <nav class="nav">
+                    <a href="#" class="nav-link">services</a>
+                    <a href="#" class="nav-link">about</a>
+                    <a href="#" class="nav-link">portfolio</a>
+                    <a href="#" class="nav-link">team</a>
+                    <a href="#" class="nav-link">pricing</a>
+                    <a href="#" class="nav-link">testimonial</a>
+                </nav>
+                <div class="nav-social">
+                    <a href="#" class="nav-social-link"><i class="fa fa-facebook"></i></a>
+                    <a href="#" class="nav-social-link"><i class="fa fa-twitter"></i></a>
+                    <a href="#" class="nav-more-link"><img src="/src/styles/images/dot-nav.svg" alt=""></a>
+                </div>
+                <a href="#" class="toogle"></a>
+            </div>
+        </div>
         
     </header>
 
