add we-do, our-contents sections

--- a/index.html
+++ b/index.html
@@ -45,8 +45,78 @@
                 <a href="#" class="toogle"></a>
             </div>
         </div>
-        
     </header>
 
+    <section class="section we-do">
+        <div class="icon-happy"></div>
+        <h3 class="subtitle">product features</h3>
+        <h2 class="title">what we <span class="alt-text">do</span></h2>
+        <div class="row-wrap-items">
+            <div class="we-do-item">
+                <div class="we-do-item-icon icon-mobile"></div>
+                <h4 class="item-title">Fully Responsive</h4>
+                <p class="item-text">Lorem ipsum dolor sit amet, consectetur 
+                        adipisicing elit, sed do eiusmod tempor incididunt 
+                        ut labore et dolore.</p>
+            </div>
+            <div class="we-do-item">
+                <div class="we-do-item-icon icon-presentation"></div>
+                <h4 class="item-title">Easy to Customize</h4>
+                <p class="item-text">Lorem ipsum dolor sit amet, consectetur 
+                        adipisicing elit, sed do eiusmod tempor incididunt 
+                        ut labore et dolore.</p>
+            </div>
+            <div class="we-do-item">
+                <div class="we-do-item-icon icon-lightbulb"></div>
+                <h4 class="item-title">Direct Support</h4>
+                <p class="item-text">Lorem ipsum dolor sit amet, consectetur 
+                        adipisicing elit, sed do eiusmod tempor incididunt 
+                        ut labore et dolore.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section our-contents">
+            <div class="icon-clipboard"></div>
+            <h3 class="subtitle">content description</h3>
+            <h2 class="title">our <span class="alt-text">contents</span></h2>
+            <div class="contents-slider">
+                <div class="slider-inner">
+                    <div class="contents-slider-indicator">
+                        <a href="#" class="slider-indicator"></a>
+                        <a href="#" class="slider-indicator"></a>
+                        <a href="#" class="slider-indicator"></a>
+                    </div>
+                </div>
+                <div class="slider-description">
+                    <div class="slider-description-item">
+                        <div class="slider-description-item-header">
+                            <p class="item-header-subtitle">lorem message</p>
+                            <p class="item-header-title">first message</p>
+                        </div>
+                        <p class="slider-description-item-text">Nunc placerat mi id nisi interdum mollis. Praesent 
+                                pharetra, justo ut scelerisque mattis, leo quam 
+                                aliquet diam, congue laoreet elit metus eget 
+                                diam. Proin ac metus diam. </p>
+                    </div>
+                    <div class="slider-description-item">
+                        <div class="slider-description-item-header">
+                            <p class="item-header-subtitle">lorem message</p>
+                            <p class="item-header-title">second message</p>
+                        </div>
+                    </div>
+                    <div class="slider-description-item">
+                        <div class="slider-description-item-header">
+                            <p class="item-header-subtitle">lorem message</p>
+                            <p class="item-header-title">third message</p>
+                        </div>
+                    </div>
+                    <p class="slider-description-text">Nunc placerat mi id nisi interdum mollis. Praesent 
+                            pharetra, justo ut scelerisque mattis, leo quam
+                            </p>
+                </div>
+            </div>
+    </section>
+    
 </body>
 </html>
