--- a/index.html
+++ b/index.html
@@ -117,6 +117,95 @@
                 </div>
             </div>
     </section>
+
+    <section class="section provide">
+        <div class="icon-tools"></div>
+        <h3 class="subtitle">Choose your required service from here</h3>
+        <h2 class="title">services we <span class="alt-text">provide</span></h2>       
+        <div class="row-wrap-items">
+            <div class="container">
+                <div class="provide-item">
+                    <p class="provide-item-title">web design</p>
+                    <p class="provide-item-icon icon-mobile"></p>
+                    <div class="provide-item-hover">
+                        <a href="#" class="provide-hover-link upper">psd to html</a>
+                        <a href="#" class="provide-hover-link">adaptive web design</a>
+                        <a href="#" class="provide-hover-link">responsive web design</a>
+                    </div>
+                </div>
+                <div class="provide-item">
+                    <p class="provide-item-title">web development</p>
+                    <p class="provide-item-icon icon-mobile"></p>
+                    <div class="provide-item-hover">
+                        <a href="#" class="provide-hover-link upper">psd to html</a>
+                        <a href="#" class="provide-hover-link">adaptive web design</a>
+                        <a href="#" class="provide-hover-link">responsive web design</a>
+                    </div>
+                </div>
+                <div class="provide-item">
+                    <p class="provide-item-title">web maintenance</p>
+                    <p class="provide-item-icon icon-tools></p>
+                    <div class="provide-item-hover">
+                        <a href="#" class="provide-hover-link upper">psd to html</a>
+                        <a href="#" class="provide-hover-link">adaptive web design</a>
+                        <a href="#" class="provide-hover-link">responsive web design</a>
+                    </div>
+                </div>
+                <div class="provide-item">
+                    <p class="provide-item-title">web design</p>
+                    <p class="provide-item-icon icon-mobile"></p>
+                    <div class="provide-item-hover">
+                        <a href="#" class="provide-hover-link upper">psd to html</a>
+                        <a href="#" class="provide-hover-link">adaptive web design</a>
+                        <a href="#" class="provide-hover-link">responsive web design</a>
+                    </div>
+                </div>
+                <div class="provide-item">
+                    <p class="provide-item-title">web development</p>
+                    <p class="provide-item-icon icon-lightbulb"></p>
+                    <div class="provide-item-hover">
+                        <a href="#" class="provide-hover-link upper">psd to html</a>
+                        <a href="#" class="provide-hover-link">adaptive web design</a>
+                        <a href="#" class="provide-hover-link">responsive web design</a>
+                    </div>
+                </div>
+                <div class="provide-item">
+                    <p class="provide-item-title">web maintenance</p>
+                    <p class="provide-item-icon icon-video"></p>
+                    <div class="provide-item-hover">
+                        <a href="#" class="provide-hover-link upper">psd to html</a>
+                        <a href="#" class="provide-hover-link">adaptive web design</a>
+                        <a href="#" class="provide-hover-link">responsive web design</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section features">
+        <div class="icon-genius"></div>
+        <h3 class="subtitle">produsct features</h3>
+        <h2 class="title">what our <span class="alt-text">features..</span></h2>
+        
+        <div class="features-nav">
+            <a href="#" class="features-nav-item">introduction</a>
+            <a href="#" class="features-nav-item">about</a>
+            <a href="#" class="features-nav-item">features</a>
+        </div>
+
+        <div class="container">
+            <div class="features-video"></div>
+            <div class="features-video-content">
+                <h3 class="video-content-title">Take a sneak peek at our
+                        videos, for once.</h3>
+                <p class="video-content-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Maiores explicabo beatae omnis modi laboriosam? Totam quae, 
+                        ab, vero tempora minus ipsam at dolores dolor, obcaecati 
+                        deleniti provident pariatur ex modi aperiam. Quae, itaque.</p>
+            </div>
+        </div>
+
+    </section>
     
 </body>
 </html>
