add mobile & tablet

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </p>
         </div>
 
-        <div class="navigation">
+        <div class="navigation no-mobile">
             <div class="container">
                 <div class="nav-wrap">
                     <a href="#" class="logo"><img src="/src/styles/images/logo.png" alt="logo site"></a>
@@ -201,7 +201,7 @@
         </div>
 
         <div class="container">
-            <div class="features-video"></div>
+            <div class="features-video"><img class="video"  src="./src/styles/images/video-image.png" alt=""></div>
             <div class="features-video-content">
                 <h3 class="video-content-title">Take a sneak peek at our
                         videos, for once.</h3>
@@ -542,7 +542,7 @@
         </div>
     </section>
 
-    <section class="section review">
+    <div class="section review">
         <div class="review-slider">
             <img src="./src/styles/images/client-avatar.png" class="review-client-avatar" alt="">
             <div class="review-star-group">
@@ -560,15 +560,15 @@
             <a href="#" class="review-slider-indicator"></a>
             <a href="#" class="review-slider-indicator review-slider-indicator-active"></a>
         </div>
-    </section>
+    </div>
 
-    <section class="partners">
+    <div class="partners">
         <a href="#" class="partners-item partners-link">Featured in -:</a>
         <img class="partners-item partners-logo" src="/src/styles/images/new-york-times.png" alt="">
         <img class="partners-item partners-logo" src="/src/styles/images/forbes.png" alt="">
         <img class="partners-item partners-logo" src="/src/styles/images/wall-street-journal.png" alt="">
         <img class="partners-item partners-logo" src="/src/styles/images/guardian.png" alt="">
-    </section>
+    </div>
 
     <section class="section contact-us">
         <div class="section-icon icon-chat"></div>
@@ -583,11 +583,11 @@
                 <textarea class="form-textarea" name="message" placeholder="Your Message"></textarea>
                 <button class="form-btn" type="submit">send message</button>
             </form>
-            <div class="contact-us-map">This will be replaced with the Google Map.</div>
+            <div class="contact-us-map no-mobile">This will be replaced with the Google Map.</div>
         </div>
     </section>
 
-    <section class="contact-info">
+    <div class="contact-info">
         <div class="contact-info-block">
             <div class="contact-block-icon icon-phone"></div>
             <div class="contact-block-title">have a auestion?</div>
@@ -603,7 +603,7 @@
             <div class="contact-block-title">drop us an email</div>
             <a class="contact-block-link" href="mailto:help@yourdomain.com">help&#64;yourdomain.com</a>
         </div>
-    </section>
+    </div>
 
     <section class="purchase">
         <div class="purchase-content">
@@ -614,7 +614,6 @@
     </section>
 
     <footer class="footer">
-        <!-- <div class="container"> -->
             <div class="footer-copyright-block">
                 <a href="#" class="logo"><img src="/src/styles/images/logo.png" alt="logo site"></a>
                 <div class="copyright-block-content">
@@ -633,7 +632,6 @@
                 <a href="#" class="footer-social-link"><i class="fa fa-pinterest"></i></a>
                 <a href="#" class="footer-social-link"><i class="fa fa-flickr"></i></a>
             </div>    
-        <!-- </div> -->
     </footer>
 </body>
 </html>
