fix bug bgcolor-works & grid for provide

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
                         <a href="#" class="tag-item">CSS</a>
                         <a href="#" class="tag-item">jQuery</a>
                     </div>
+                    <img class="gallery-item-image" src="./src/styles/images/gallery-item-bg.png" alt="gallery item bg-image">
                 </div>
                 <div class="gallery-item-description">
                         <h4 class="description-title">infinite landing page</h4>
@@ -248,6 +249,7 @@
                         <a href="#" class="tag-item">CSS</a>
                         <a href="#" class="tag-item">jQuery</a>
                     </div>
+                    <img class="gallery-item-image" src="./src/styles/images/gallery-item-bg.png" alt="gallery item bg-image">
                 </div>
                 <div class="gallery-item-description">
                     <h4 class="description-title">infinite landing page</h4>
@@ -262,6 +264,7 @@
                         <a href="#" class="tag-item">CSS</a>
                         <a href="#" class="tag-item">jQuery</a>
                     </div>
+                    <img class="gallery-item-image" src="./src/styles/images/gallery-item-bg.png" alt="gallery item bg-image">
                 </div>
                 <div class="gallery-item-description">
                     <h4 class="description-title">infinite landing page</h4>
@@ -276,6 +279,7 @@
                         <a href="#" class="tag-item">CSS</a>
                         <a href="#" class="tag-item">jQuery</a>
                     </div>
+                    <img class="gallery-item-image" src="./src/styles/images/gallery-item-bg.png" alt="gallery item bg-image">
                 </div>
                 <div class="gallery-item-description">
                     <h4 class="description-title">infinite landing page</h4>
@@ -290,6 +294,7 @@
                         <a href="#" class="tag-item">CSS</a>
                         <a href="#" class="tag-item">jQuery</a>
                     </div>
+                    <img class="gallery-item-image" src="./src/styles/images/gallery-item-bg.png" alt="gallery item bg-image">
                 </div>
                 <div class="gallery-item-description">
                     <h4 class="description-title">infinite landing page</h4>
@@ -304,6 +309,7 @@
                         <a href="#" class="tag-item">CSS</a>
                         <a href="#" class="tag-item">jQuery</a>
                     </div>
+                    <img class="gallery-item-image" src="./src/styles/images/gallery-item-bg.png" alt="gallery item bg-image">
                 </div>
                 <div class="gallery-item-description">
                     <h4 class="description-title">infinite landing page</h4>
@@ -318,6 +324,7 @@
                         <a href="#" class="tag-item">CSS</a>
                         <a href="#" class="tag-item">jQuery</a>
                     </div>
+                    <img class="gallery-item-image" src="./src/styles/images/gallery-item-bg.png" alt="gallery item bg-image">
                 </div>
                 <div class="gallery-item-description">
                     <h4 class="description-title">infinite landing page</h4>
@@ -332,6 +339,7 @@
                         <a href="#" class="tag-item">CSS</a>
                         <a href="#" class="tag-item">jQuery</a>
                     </div>
+                    <img class="gallery-item-image" src="./src/styles/images/gallery-item-bg.png" alt="gallery item bg-image">
                 </div>
                 <div class="gallery-item-description">
                     <h4 class="description-title">infinite landing page</h4>
